--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mental Health Research</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://main.dr7kktrvsmllr.amplifyapp.com/favicon.ico">
 </head>
 <body>
 <header>
