removed all images and fixed links

--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -48,17 +48,17 @@
     <!-- Section 2: Description -->
     <section id="description" class="card">
         <h2>What is Schizophrenia?</h2>
-        <p>Schizophrenia is a chronic and severe mental health disorder that affects how a person thinks, feels, and behaves. People with schizophrenia may seem like they have lost touch with reality, which can be distressing for both the individual and their loved ones. <a href="https://www.who.int" target="_blank">(WHO)</a></p>
+        <p>Schizophrenia is a chronic and severe mental health disorder that affects how a person thinks, feels, and behaves. People with schizophrenia may seem like they have lost touch with reality, which can be distressing for both the individual and their loved ones. <a href="https://www.nimh.nih.gov/health/topics/schizophrenia" target="_blank">(NIMH)</a></p>
     </section>
 
     <!-- Section 3: Signs and Symptoms -->
     <section id="symptoms" class="card">
         <h2>Signs and Symptoms</h2>
         <ul>
-            <li><strong>Hallucinations:</strong> Hearing voices or seeing things that aren’t there. <a href="https://www.nimh.nih.gov" target="_blank">(NIMH)</a></li>
-            <li><strong>Delusions:</strong> False beliefs that are not based in reality. <a href="https://www.nimh.nih.gov" target="_blank">(NIMH)</a></li>
-            <li><strong>Disorganized thinking:</strong> Difficulty organizing thoughts or speaking clearly. <a href="https://www.nimh.nih.gov" target="_blank">(NIMH)</a></li>
-            <li><strong>Withdrawal:</strong> Lack of motivation or interest in social activities. <a href="https://www.nimh.nih.gov" target="_blank">(NIMH)</a></li>
+            <li><strong>Hallucinations:</strong> Hearing voices or seeing things that aren’t there. <a href="https://www.nhs.uk/mental-health/conditions/schizophrenia/symptoms/" target="_blank">(NHS)</a></li>
+            <li><strong>Delusions:</strong> False beliefs that are not based in reality. <a href="https://www.nhs.uk/mental-health/conditions/schizophrenia/symptoms/" target="_blank">(NHS)</a></li>
+            <li><strong>Disorganized thinking:</strong> Difficulty organizing thoughts or speaking clearly. <a href="https://www.healthdirect.gov.au/schizophrenia" target="_blank">(Health Direct)</a></li>
+            <li><strong>Demotivated:</strong> Lack of motivation or interest in social activities. <a href="https://www.healthdirect.gov.au/schizophrenia" target="_blank">(Health Direct)</a></li>
         </ul>
     </section>
 
@@ -76,11 +76,11 @@
     <!-- Section 5: Treatments -->
     <section id="treatments" class="card">
         <h2>Treatments and Therapies</h2>
-        <p>Schizophrenia is treatable with a combination of:</p>
+        <p>Schizophrenia is treatable with:</p>
         <ul>
-            <li><strong>Medication:</strong> Antipsychotic drugs to reduce symptoms. <a href="https://www.nimh.nih.gov" target="_blank">(NIMH)</a></li>
-            <li><strong>Therapy:</strong> Cognitive Behavioral Therapy (CBT) to manage thoughts and behaviors. <a href="https://www.nimh.nih.gov" target="_blank">(NIMH)</a></li>
-            <li><strong>Support:</strong> Family therapy and community support groups. <a href="https://www.nimh.nih.gov" target="_blank">(NIMH)</a></li>
+            <li><strong>Medication:</strong> Antipsychotic drugs to reduce symptoms. <a href="https://www.nhs.uk/mental-health/conditions/schizophrenia/treatment/" target="_blank">(NHS)</a></li>
+            <li><strong>Therapy:</strong> Cognitive Behavioral Therapy (CBT) to manage thoughts and behaviors. <a href="https://www.nhs.uk/mental-health/conditions/schizophrenia/treatment/" target="_blank">(NHS)</a></li>
+            <li><strong>Support:</strong> Family therapy and community support groups. <a href="https://www.nhs.uk/mental-health/conditions/schizophrenia/treatment/" target="_blank">(NHS)</a></li>
         </ul>
     </section>
 
@@ -96,16 +96,15 @@
         </ul>
     </section>
 
-    <!-- Section 7: Impact on Life -->
+    <!-- Section 7: Impact on Life and Relationships -->
     <section id="impact" class="card">
-        <h2>Impact on Life and Relationships</h2>
-        <p>Schizophrenia can affect daily functioning, relationships, and self-esteem. However, with proper treatment and support, individuals can lead fulfilling lives. <a href="https://www.nimh.nih.gov" target="_blank">(NIMH)</a></p>
+        <h2>Impact on Life</h2>
+        <p>Schizophrenia can affect daily functioning, relationships, and self esteem. However, with proper treatment and support, people can overcome schizophrenia and live. <a href="https://www.who.int/news-room/fact-sheets/detail/schizophrenia" target="_blank">(WHO)</a></p>
     </section>
 
     <!-- Section 8: Famous People -->
     <section id="stories" class="card">
         <h2>Famous People</h2>
-        <img src="https://cdn.theatlantic.com/thumbor/ZrjFfaV4ASVQ4fjNPkFfA3LOpBM=/156x0:1844x1688/1080x1080/media/img/mt/2015/05/AP956908103419/original.jpg" alt="Eduard Einstein" class="section-image">
         <p><strong>John Nash:</strong> A Nobel Prize winning mathematician who managed his schizophrenia and continued his work. <a href="https://www.webmd.com/schizophrenia/ss/slideshow-schizophrenia-famous-names" target="_blank">(WebMD)</a></p>
         <p><strong>Eduard Einstein:</strong> The youngest child of Albert Einstein who was diagnosed with schizophrenia at age 20. <a href="https://www.webmd.com/schizophrenia/ss/slideshow-schizophrenia-famous-names" target="_blank">(WebMD)</a></p>
     </section>
@@ -114,7 +113,6 @@
     <div class="footer-content">
         <ul class="site-footer-links">
             <li>This site operates under the <a href="https://www.gnu.org/licenses/gpl-3.0" target="_blank">GNU General Public License (GPL)</a></li>
-            <li>Images on this site are owned by their respective copyright holders</li>
             <li>Created by Ruben Smolenaers</li>
         </ul>
         <div class="social-icons">
