--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header-overlay"></div>
         <div class="header-content">
             <h1>Home</h1>
-            <p>Click on the links below to access resources</p>
+            <p>Click on the links below</p>
         </div>
     </header>
     <main>
