--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -48,7 +48,7 @@
     <!-- Section 2: Description -->
     <section id="description" class="card">
         <h2>What is Schizophrenia?</h2>
-        <p>Schizophrenia is a chronic and severe mental health disorder that affects how a person thinks, feels, and behaves. People with schizophrenia may seem like they have lost touch with reality, which can be distressing for both the individual and their loved ones. <a href="https://www.nimh.nih.gov/health/topics/schizophrenia" target="_blank">(NIMH)</a></p>
+        <p>Schizophrenia is a serious mental illness that affects how a person thinks, feels, and behaves. People with schizophrenia may seem as though they have lost touch with reality, which can be distressing for them and for their family and friends. <a href="https://www.nimh.nih.gov/health/topics/schizophrenia" target="_blank">(NIMH)</a></p>
     </section>
 
     <!-- Section 3: Signs and Symptoms -->
@@ -87,7 +87,7 @@
     <!-- Section 6: Statistics -->
     <section id="statistics" class="card">
         <h2>Statistics</h2>
-        <p>Here are some key statistics about schizophrenia:</p>
+        <p>Here are some statistics about schizophrenia:</p>
         <ul>
             <li><strong>Global:</strong> 24 million people worldwide have schizophrenia. <a href="https://www.who.int/news-room/fact-sheets/detail/schizophrenia" target="_blank">(WHO)</a></li>
             <li><strong>Local:</strong> 150,000 Australians have with schizophrenia. <a href="https://www.betterhealth.vic.gov.au/health/conditionsandtreatments/schizophrenia" target="_blank">(Better Health)</a></li>
@@ -99,12 +99,14 @@
     <!-- Section 7: Impact on Life and Relationships -->
     <section id="impact" class="card">
         <h2>Impact on Life</h2>
+        <p>The impact that having Schizophrenia can have on your life:</p>
         <p>Schizophrenia can affect daily functioning, relationships, and self esteem. However, with proper treatment and support, people can overcome schizophrenia and live. <a href="https://www.who.int/news-room/fact-sheets/detail/schizophrenia" target="_blank">(WHO)</a></p>
     </section>
 
     <!-- Section 8: Famous People -->
     <section id="stories" class="card">
         <h2>Famous People</h2>
+        <p>Known people who were diagnosed with Schizophrenia:</p>
         <p><strong>John Nash:</strong> A Nobel Prize winning mathematician who managed his schizophrenia and continued his work. <a href="https://www.webmd.com/schizophrenia/ss/slideshow-schizophrenia-famous-names" target="_blank">(WebMD)</a></p>
         <p><strong>Eduard Einstein:</strong> The youngest child of Albert Einstein who was diagnosed with schizophrenia at age 20. <a href="https://www.webmd.com/schizophrenia/ss/slideshow-schizophrenia-famous-names" target="_blank">(WebMD)</a></p>
     </section>
