--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -35,6 +35,38 @@
                 font-size: 2rem;
             }
         }
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0;
+        }
+        main {
+            flex: 1;
+        }
+        .header-links {
+            display: flex;
+            justify-content: space-around;
+            background: rgb(235, 235, 235);
+            padding: 5px 0;
+            font-size: 0.8rem;
+            height: 30px;
+            align-items: center;
+        }
+        .header-links a {
+            color: rgb(40, 113, 192);
+            text-decoration: none;
+            font-weight: 600;
+            margin: 0 10px;
+        }
+        @media (max-width: 768px) {
+            header {
+                height: 100px;
+            }
+            .header-content h1 {
+                font-size: 2rem;
+            }
+        }
     </style>
 </head>
 <body>
@@ -43,6 +75,11 @@
     <div class="header-content">
         <h1>Schizophrenia</h1>
     </div>
+</header>
+<header class="header-links">
+    <nav>
+        <a href="index.html">Home</a>
+    </nav>
 </header>
 <main>
     <!-- Section 2: Description -->
